# c-primer_test

./: README.md
1/: .1_21.cpp.swp  1_20.cpp  1_21.cpp  1_23.cpp
10/: 10_1.cpp  10_11.cpp  10_13.cpp  10_14.cpp  10_15.cpp  10_16.cpp  10_18.cpp  10_2.cpp  10_21.cpp  10_24.cpp  10_27.cpp  10_29.cpp  10_3.cpp  10_33.cpp  10_4.cpp  10_6.cpp  10_9.cpp  makefile  read.md  string
11/: readme
11/11_12/: CMakeLists.txt  main.cpp
11/11_4/: CMakeLists.txt  main.cpp  words.txt
12/: 12_15.cpp  12_20.cpp  12_23.cpp  12_26.cpp  12_6.cpp  StrBlob.h
12/12_27/: CMakeLists.txt  TextQuery.cpp  TextQuery.h  main.cpp
13/: 13_18.cpp  13_19.cpp  13_22.cpp  13_27.cpp  13_39.cpp  13_39.h  13_8.cpp
14/: 14_34.cpp  14_35.cpp  14_36.cpp  14_37.cpp  14_38.cpp  14_44.cpp
15/: 15_3.h  15_5.cpp  15_7.cpp
16/: 16_14.cpp  16_2.cpp  16_4.cpp  16_5.cpp  16_6.cpp
17/: 17_1.cpp  17_10.cpp  17_15.cpp  17_28.cpp  17_29.cpp  17_30.cpp  17_4_5_6.cpp
2/2_42/: CMakeLists.txt  Sales_data.h  main.cpp
3/3_14/: main.cpp
3/3_16/: main.cpp
3/3_17/: CMakeLists.txt  main.cpp
3/3_20/: main.cpp
3/3_21/: main.cpp
3/3_22/: main.cpp
3/3_23/: main.cpp
3/3_24/: CMakeLists.txt  main.cpp
3/3_25/: main.cpp
3/3_30/: main.cpp
3/3_35/: main.cpp
3/3_36/: main.cpp
3/3_41/: main.cpp
3/3_42/: main.cpp
3/3_43/: main.cpp
4/4_21/: main.cpp
4/4_28/: main.cpp
4/4_33/: main.cpp
5/5_10/: CMakeLists.txt  main.cpp
5/5_11/: CMakeLists.txt  main.cpp
5/5_12/: CMakeLists.txt  main.cpp
5/5_14/: CMakeLists.txt  (+1 more)
7/: PERSON.cpp  PERSON.h  Sales_data.cpp  Sales_data.h  Screen.cpp  readme.md
(+47 files in other folders)
